--- a/.config/sway/config
+++ b/.config/sway/config
@@ -165,6 +165,7 @@ bindsym $mod+v splitv
 # Switch the current container between different layout styles
 bindsym $mod+s layout toggle split
 bindsym $mod+t layout tabbed
+bindsym $mod+Shift+f floating toggle
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
