--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,8 +2,8 @@ live_config_reload: true
 
 font:
   normal:
-    family: SourceCodePro
-  size: 11
+    family: monospace
+  size: 10
 
 background_opacity: 0.8
 
@@ -17,8 +17,3 @@ cursor:
     shape: Beam
     blinking: On
     blink_interval: 750
-
-window:
-  padding:
-    x: 10
-    y: 10
