--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,5 +1,5 @@
 {
-   "layer": "top",
+    "layer": "top",
     "spacing": 30,
     "height": 35,
     "margin-left": 10,
@@ -9,7 +9,9 @@
                      "custom/space", "memory",
                      "custom/space", "sway/workspaces"],
     "modules-center": ["clock"],
-    "modules-right": ["pulseaudio", "custom/space",
+    "modules-right": ["battery",    "custom/space",
+                      "network",    "custom/space",
+                      "pulseaudio", "custom/space",
                       "tray",       "custom/space"],
 
 
@@ -17,11 +19,15 @@
         "format": "\t"
     },
 
-
-    "clock": {
-        "format": "{:%a, %d %b  %H:%M}"
+    "battery": {
+        "format": "{capacity}% {icon}",
+        "format-icons": ["", "", "", "", ""]
     },
 
+
+    "clock": {
+        "format-alt": "{:%a, %d %b  %H:%M}"
+    },
 
     "tray": {
         "icon-size": 21,
@@ -42,12 +48,44 @@
 
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "Volume:{volume}%",
+        "format": "{icon}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        "format-source": "{volume}% ",
+        "format-source-muted": "",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
+        },
         "on-click": "pavucontrol"
     },
 
 
+    "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "{essid} ({signalStrength}%)  ",
+        "format-ethernet": "{ipaddr}/{cidr} ",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "on-click-right": "foot bash -i -c nmtui"
+    },
+
+
+    "river/tags": {
+        "num-tags": 4,
+        "tag-labels": ["1", "2", "3", "4"]
+    },
+
     "sway/workspaces": {
         "format": "{name}"
-    }
+    },
+
 }
