--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -56,7 +56,7 @@
 
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{icon} {volume}%",
+        "format": "♬ {volume}%",
         "format-bluetooth": "{icon} {volume}%",
         "format-bluetooth-muted": "🔇",
         "format-muted": "🔇",
