--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,9 +1,12 @@
 live_config_reload: true
 
+env:
+  TERM: xterm
+
 font:
   normal:
-    family: monospace
-  size: 10
+    family: "Source Code Pro"
+  size: 14
 
 background_opacity: 0.8
 
