--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -12,6 +12,11 @@ background_opacity: 0.8
 
 #draw_bold_text_with_bright_colors: false
 
+window:
+  padding:
+    x: 6
+    y: 6
+
 mouse:
   hide_when_typing: true
 
